--- a/src/package.json
+++ b/src/package.json
@@ -8,10 +8,11 @@
     "docs:serve": "vitepress serve docs"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ulysses Seabra",
   "license": "ISC",
-  "description": "",
+  "description": "Guia de boas práticas de programação",
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-google-analytics": "^1.0.2"
   }
 }
