--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:latest
             ${{ secrets.DOCKER_USER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-      # - name: Deploy via Portainer
-      #   run: curl -X POST ${{ secrets.PORTAINER_WEBHOOK }}
+      - name: Deploy via Portainer
+        run: curl -X POST ${{ secrets.PORTAINER_WEBHOOK }}
 
       # - name: Setup Node
       #   uses: actions/setup-node@v4
